[gd_scene load_steps=6 format=3 uid="uid://djqn6ki2rsqag"]

[ext_resource type="Script" path="res://scripts/BreakableBlock.gd" id="1_xrbyw"]
[ext_resource type="Texture2D" uid="uid://cye0amnnax0ws" path="res://assets/tileBrown.png" id="2_fob8p"]
[ext_resource type="Texture2D" uid="uid://blm2wtha0gos6" path="res://assets/breaking/break1.png" id="3_pvdok"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vv2t3"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wdher"]
size = Vector2(72, 72)

[node name="BreakableBlock" type="StaticBody2D" groups=["breakable_block"]]
position = Vector2(960, 760)
scale = Vector2(2, 2)
script = ExtResource("1_xrbyw")
mouseHover = true

[node name="CheckBreak" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vv2t3")

[node name="Block" type="Sprite2D" parent="."]
texture = ExtResource("2_fob8p")

[node name="BreakingAnimation" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("3_pvdok")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wdher")

[connection signal="timeout" from="CheckBreak" to="." method="_on_check_break_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
